<package>
  <name>obstacles_description</name>
  <version>0.1.0</version>
  <description>
    Geometric objects
  </description>
  <author>M Campana</author>
  <maintainer email="hpp@laas.fr">Florent Lamiraux</maintainer>
  <license>LGPL v2</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
